--- a/index.html
+++ b/index.html
@@ -1,7 +1,13 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <meta charset="utf-8">
         <title> Jalen Moore - Home </title>
+        <style>
+        h1 {
+            color: rgb(255, 0, 0);
+        }
+        </style>
     </head>
     <body>
         <h1> First heading </h1>
