--- a/index.html
+++ b/index.html
@@ -3,14 +3,15 @@
     <head>
         <meta charset="utf-8">
         <title> Jalen Moore - Home </title>
-        <style>
-        h1 {
-            color: rgb(255, 0, 0);
-        }
-        </style>
+        <link href="styles.css" rel="stylesheet">
     </head>
     <body>
-        <h1> First heading </h1>
-        <p> asdfsadfsadfsadf </p>
+        <div>
+            <h1> Jalen Moore </h1>
+        </div>
+        <div> 
+            <div> This will eventually be my portfolio. </div>
+            <div> asdf</div>
+        </div>
     </body>
 </html>
