--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         </div>
         <div> 
             <div> This will eventually be my portfolio. </div>
-            <div> asdf</div>
+            <div> *poggers* </div>
         </div>
     </body>
 </html>
