Added a primitive navbar + a bare-bones about-me

--- a/index.html
+++ b/index.html
@@ -3,15 +3,33 @@
     <head>
         <meta charset="utf-8">
         <title> Jalen Moore - Home </title>
-        <link href="styles.css" rel="stylesheet">
+        <link href="style.css" rel="stylesheet">
     </head>
+    <div class="topnav">
+        <a class="active" href="index.html">About</a>
+        <a href="development.html">Development</a>
+        <a href="resume.html">Resume</a>
+        <a href="portfolio.html">Portfolio</a>
+        <a href="contact.html">Contact</a>
+    </div>
     <body>
-        <div>
-            <h1> Jalen Moore </h1>
-        </div>
-        <div> 
-            <div> This will eventually be my portfolio. </div>
-            <div> *poggers* </div>
+        <div class="main">
+            <div class="title">
+                <h1> Jalen Moore </h1>
+            </div>
+            
+            <div class="row">
+                <div class="column">
+                This will eventually be my portfolio.
+                </div>
+                <div class="column">
+                    <div>
+                        Hi! I am Jalen. I am a freshman from the University of Nebraska Omaha. I study Electrical Engineering and Computer Science in the pursuit of a career in robotics and control systems engineering. I am projected to graduate in May 2025.
+                    <div>
+                </div>
+            </div>
+            
+
         </div>
     </body>
 </html>
